# weather

./: .gitignore  main.py  pyproject.toml  test.py  towns.json
data/: towns.json
src/: __init__.py  links.py  parse.py  user_data.py  weather.py
src/utils/: graph.py  loading.py
